# DataStructExps

./: .gitignore  5.实验教学大纲（数据结构与算法课程实验）.docx  6. 实验指导书.docx  CMakeLists.txt  readme.md
exp1-seqList/: 1.1.c  1.2.c  1.3.c  readme.md
exp2-linkList/: 2.1.c  2.2.c  2.3.1.c  2.3.2.c  readme.md
exp3-Stack/: 3.1.c  3.2.c  3.3.c  3.4.c  3.5.c  3.5.i.c  3.6.c  exp3-Stack.md  readme.md
exp4-Tree/: 4.1.c  4.3.c  4.4.c  readme.md
exp5-Search/: 5.1.c  5.2.c  5.3.c  5.4.c  readme.md
