cmake_minimum_required(VERSION 3.22)
project(DataStructExps C)

set(CMAKE_C_STANDARD 99)

add_executable(DataStructExps exp5-Search/5.2.c)
#add_executable(DataStructExps exp4-Tree/4.4.c)
add_executable(1.2 exp1-seqList/1.2.c)
add_executable(1.3 exp1-seqList/1.3.c)
add_executable(2.1 exp2-linkList/2.1.c)
add_executable(2.2 exp2-linkList/2.2.c)
add_executable(2.3.2 exp2-linkList/2.3.2.c)